<resources>
    <string name="app_name">Neuropsychology Tests</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_num_paths">Paths</string>
    <string name="title_activity_main">Paths</string>
    <string name="switch_points">Number of Points for Hard Blob</string>
    <string name="appearance">Appearance</string>
    <string name="line_width">Line Width</string>
    <string name="blob_radius">Blob Radius</string>
    <string name="timing">Timing</string>
    <string name="complexity">Complexity</string>
    <string name="shape_span_number_of_shapes">Number of Shapes for Shape-Span</string>

    <string name="trail_making_letters_question">Exclude Letters in Trail Making?</string>
    <string name="trail_making_feedback_question">Allow illegal moves in Trail Making?</string>

    <string name="trail_making_include">Numbers Only</string>
    <string name="trail_making_exclude">Alternate Letters and Numbers</string>

    <string name="trail_making_feedback_no">Do Not Allow Illegal Moves</string>
    <string name="trail_making_feedback_yes">Allow Illegal Moves</string>

    <string name="num_paths_timing">Timeout for Option Generation</string>
    <string name="switch_paths_timing">Timeout for T-Maze</string>
    <string name="fluency_timing">Timeout for Design Fluency</string>
    <string name="complex_figure_timing">Timeout for Complex Figure</string>
    <string name="trail_timing">Timeout for Trail Making</string>

    <string name="tol_max_difficulty">Max ToL Difficulty</string>
    <string name="tol_min_difficulty">Min ToL Difficulty</string>
    <string name="tol_repeat_difficulty">Repeat Each Difficulty How Many Times?</string>

    <string name="tol_mixed_height_question">Mix Heights of ToL Pegs?</string>
    <string name="tol_mixed_height_yes">Mix Heights</string>
    <string name="tol_mixed_height_no">Don\'t Mix Heights</string>

    <string name="tol_increase_difficulty_question">Vary Difficutly?</string>
    <string name="tol_increase_difficulty">Increase Difficulty</string>
    <string name="tol_random_difficulty">Random Difficulty</string>

    <string name="tol_end_after_n_trials">How Many Trials?</string>

    <string name="number_of_trials">Number of Trials</string>



<!-- Some constants for different game modes -->


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_menutest">Menutest</string>


    <!-- Change this to your app key -->
    <string name="APP_KEY">xnht8p5v29tsxfn</string>
</resources>

