<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <EditTextPreference
            android:key="line_width"
            android:title="@string/line_width"
            android:numeric="integer"
            android:maxLength="2"
            android:defaultValue="6"
            />
        <EditTextPreference
            android:key="blob_radius"
            android:title="@string/blob_radius"
            android:numeric="integer"
            android:maxLength="3"
            android:defaultValue="4"
                />
        <EditTextPreference
            android:key="num_paths_timing"
            android:title="@string/num_paths_timing"
            android:numeric="integer"
            android:maxLength="3"
            android:defaultValue="120"
            />
</PreferenceScreen>